pushed half code to uploading image

--- a/djangoapp/webapp/templates/webapp/index.html
+++ b/djangoapp/webapp/templates/webapp/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1> This is a login form </h1>
+    <h1> Welcome to my Web Application </h1>
+    <a href="/webapp/log-in/">Login to your account</a> <br><br>
+    <a href="/webapp/signup/">Register a new account</a>
 </body>
 </html>
